@@ -32,8 +32,46 @@ sub test_abstract {
 }
 
 
-test_abstract(<<END, "Stuff and things");
+test_abstract(<<END, "Foo", "Stuff and things", "Simple abstract");
 =head1 NAME
 
 Foo - Stuff and things
+END
+
+
+test_abstract(<<END, "NEXT", "Provide a pseudo-class NEXT (et al) that allows method redispatch", "Name.pm");
+=head1 NAME
+
+NEXT.pm - Provide a pseudo-class NEXT (et al) that allows method redispatch
+END
+
+
+test_abstract(<<END, "Compress::Raw::Zlib::FAQ", "Frequently Asked Questions about Compress::Raw::Zlib", "double dash");
+=pod
+
+Compress::Raw::Zlib::FAQ -- Frequently Asked Questions about Compress::Raw::Zlib
+END
+
+
+test_abstract(<<END, "Foo", "This is", "Only in POD");
+# =pod
+
+Foo - This is not in pod
+
+=cut
+
+Foo - This isn't in pod either
+
+=pod
+
+Foo - This is
+
+Foo - So is this.
+END
+
+
+test_abstract(<<END, "Foo", "the abstract", "more spaces");
+=pod
+
+Foo   -  the abstract
 END
