@@ -1,4 +1,8 @@
 6.57_01
+    Improvements
+    * parse_abstract() is more robust supporting "Package.pm" and multiple
+      dashes and spaces. [rt.perl.org 74438]
+
     Bug Fixes
     * Recognize .so files in AIX. [rt.cpan.org 41360] (Jens Rehsack)
     * Remove manual image-base generation on Win32/gcc [rt.cpan.org 47138]
